Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-video-arcade.help.master\n"
-"POT-Creation-Date: 2009-07-18 17:44+0000\n"
-"PO-Revision-Date: 2011-02-21 15:14+0100\n"
+"POT-Creation-Date: 2011-02-21 20:07+0000\n"
+"PO-Revision-Date: 2011-09-15 12:32+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1056,9 +1056,9 @@ msgid ""
 "mame/roms</computeroutput>. Move ROM images to this directory and restart "
 "<application>GNOME Video Arcade</application>."
 msgstr ""
-"El comando debería mostrar un nombre de directorio tal como <computeroutput>/"
-"usr/share/mame/roms</computeroutput>. Mueva las imágenes de las ROM a este "
-"directorio y reinicie <application>GNOME vídeo arcade</application>."
+"El comando debería mostrar un nombre de carpeta tal como <computeroutput>/"
+"usr/share/mame/roms</computeroutput>. Mueva las imágenes de las ROM a esta "
+"carpeta y reinicie <application>GNOME vídeo arcade</application>."
 
 #: C/gnome-video-arcade.xml:717(para)
 msgid ""
@@ -1068,7 +1068,7 @@ msgid ""
 "Linux</productname> distribution, please contact the maintainers of that "
 "distribution for further instructions."
 msgstr ""
-"En caso de que el comando no muestre ningún nombre de directorio, puede "
+"En caso de que el comando no muestre ningún nombre de carpeta, puede "
 "significar que <application>MAME</application> no esté bien configurado en "
 "su sistema. Si obtuvo <application>MAME</application> de una distribución "
 "<productname>GNU/Linux</productname>, contacte con los desarrolladores de "
@@ -1092,7 +1092,7 @@ msgstr ""
 "estará vacía. Cambie a la vista de <guilabel>Juegos disponibles</guilabel> "
 "para estar seguro de que todos los juegos disponibles aparecen en la lista."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
+#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: C/gnome-video-arcade.xml:0(None)
 msgid "translator-credits"
 msgstr ""
