Point to the new GVA webpage at <http://live.gnome.org/GnomeVideoArcade>.

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ who just want to easily play classic arcade games on their desktop.
 Though it may be suitable for use in custom arcade cabinets, the
 project is not designed for that purpose.
 
+Webpage: http://live.gnome.org/GnomeVideoArcade
 
 Dependencies
 ------------
