--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+GNOME Video Arcade 0.8.3
+========================
+
+        Released February 16, 2012
+
+        Bugs Fixed
+        ----------
+        GNOME #669950: Many popups when copying files into mame dir
+                       (reported by Alan Pope)
+        GNOME #670102: Crash when searching
+                       (reported by Alan Pope)
+
+        Updated Translations
+        --------------------
+        Czech (Marek Černocký)
+
 GNOME Video Arcade 0.8.2
 ========================
 
