--- a/README
+++ b/README
@@ -68,20 +68,6 @@ installed prior to compiling the source code:
        distribution, but it should be something similar to libsoup-devel
        (Fedora) or libsoup2.4-dev (Debian/Ubuntu).
 
-   - Header files and base plugins for GStreamer. (optional)
-
-       The GStreamer header files should be available from your
-       GNU/Linux distribution as a "development" package.  The exact
-       package name varies by distribution, but it should be something
-       similar to gstreamer-devel (Fedora) or libgstreamer0.10-dev
-       (Debian/Ubuntu).  The base plugins package name should be
-       similar to gstreamer-plugins-base-devel (Fedora) or
-       libgstreamer-plugins-base0.10-dev (Debian/Ubuntu).
-
-       GNOME Video Arcade uses GStreamer to stream video game music
-       clips in the Properties window.  The music clips are streamed
-       from http://www.arcade-history.com.
-
    - Header files for libwnck version 2.91.6 (or higher). (optional)
 
        The libwnck header files should be available from your GNU/Linux
@@ -176,8 +162,8 @@ developer documentation while building GNOME Video Arcade.  Once
 installed, the documentation can be viewed through Devhelp.
 
 Several "with"/"without" options are available for optional libraries
-including D-Bus, GStreamer and libwnck.  See the previous section for
-details on what these libraries are used for.
+including D-Bus and libwnck.  See the previous section for details on
+what these libraries are used for.
 
 For a complete list of configure options, run:
 
