--- a/docs/gnome-video-arcade.1
+++ b/docs/gnome-video-arcade.1
@@ -9,11 +9,8 @@ gnome-video-arcade \- A MAME front-end for GNOME
 [\fIOPTION\fR...]
 .SH DESCRIPTION
 .B gnome-video-arcade
-is a MAME front-end for the GNOME Desktop Environment.  It supports both the
-.B xmame
-and
-.B sdlmame
-ports of the original MAME program written by Nicola Salmoria.
+is a MAME front-end for desktop environments compliant with the various
+freedesktop.org specifications.
 .P
 This program is targeted towards non-technical arcade enthusiasts who just
 want to easily play classic arcade games on their desktop.  Though it may
